--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="20dp"
+        android:drawableLeft="@drawable/baseline_airplanemode_inactive_24"
         android:text="Turn off flight mode"
         app:layout_constraintBottom_toTopOf="@+id/buttonUpdatingProfile"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:drawableLeft="@drawable/baseline_cached_24"
         android:text="Updating profile"
         app:layout_constraintBottom_toTopOf="@+id/buttonPictureSaved"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:drawableLeft="@android:drawable/btn_star_big_on"
+        android:drawableRight="@android:drawable/btn_star_big_on"
         android:text="Level 4 completed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
+        android:drawableLeft="@drawable/baseline_pause_circle_24"
         android:text="Music paused"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
