Se modifican colores de botones.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="#7559D9"
         android:drawableLeft="@drawable/baseline_airplanemode_inactive_24"
         android:text="Turn off flight mode"
         app:layout_constraintBottom_toTopOf="@+id/buttonUpdatingProfile"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="#D9525E"
         android:drawableLeft="@drawable/baseline_cached_24"
         android:text="Updating profile"
         app:layout_constraintBottom_toTopOf="@+id/buttonPictureSaved"
@@ -36,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:backgroundTint="#C9C9C9"
         android:text="Picture saved to gallery"
         app:layout_constraintBottom_toTopOf="@+id/imageAndy"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#484D50"
         android:text="Unlocked level 5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="#5F94D9"
         android:drawableLeft="@android:drawable/btn_star_big_on"
         android:drawableRight="@android:drawable/btn_star_big_on"
         android:text="Level 4 completed"
@@ -69,10 +74,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#49A660 "
         android:drawableLeft="@drawable/baseline_pause_circle_24"
         android:text="Music paused"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLevel"
         app:layout_constraintVertical_bias="0.0" />
