Se agrega binding a gradle y se modifica textColor a botonUnlocked.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:backgroundTint="#484D50"
         android:padding="20sp"
         android:text="Unlocked level 5"
+        android:textColor="#61C1CD"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
