--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,7 @@
 
     <Button
         android:id="@+id/buttonUnlocked"
+        style="borde"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -65,7 +66,9 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageAndy" />
+        app:layout_constraintTop_toBottomOf="@+id/imageAndy"
+        app:strokeWidth="3dp"
+        tools:strokeColor="#61C1CD" />
 
     <Button
         android:id="@+id/buttonLevel"
@@ -106,10 +109,11 @@
         android:layout_height="183dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/andy"
-        tools:layout_editor_absoluteY="297dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.53"
+        app:srcCompat="@drawable/andy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
