--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,48 +10,44 @@
         android:id="@+id/buttonPlane"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="#7559D9"
         android:drawableLeft="@drawable/baseline_airplanemode_inactive_24"
         android:padding="20sp"
         android:text="Turn off flight mode"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonUpdatingProfile"
-        app:layout_constraintEnd_toEndOf="@+id/buttonUpdatingProfile"
-        app:layout_constraintStart_toStartOf="@+id/buttonUpdatingProfile"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        tools:layout_editor_absoluteX="233dp" />
 
     <Button
         android:id="@+id/buttonUpdatingProfile"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#D9525E"
         android:drawableLeft="@drawable/baseline_cached_24"
         android:padding="20sp"
         android:text="Updating profile"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonPictureSaved"
-        app:layout_constraintEnd_toEndOf="@+id/buttonPictureSaved"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/buttonPictureSaved" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/buttonPlane"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonPictureSaved"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="#C9C9C9"
         android:padding="20sp"
         android:text="Picture saved to gallery"
         android:textColor="#C33434"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageAndy"
-        app:layout_constraintEnd_toEndOf="@+id/imageAndy"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="@+id/imageAndy"
+        app:layout_constraintStart_toStartOf="@+id/buttonPlane"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlane"
         app:strokeColor="#A19F9F"
         app:strokeWidth="1dp" />
 
@@ -60,15 +56,17 @@
         style="borde"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="#484D50"
         android:padding="20sp"
         android:text="Unlocked level 5"
         android:textColor="#61C1CD"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageAndy"
-        app:layout_constraintStart_toStartOf="@+id/imageAndy"
-        app:layout_constraintTop_toBottomOf="@+id/imageAndy"
+        app:layout_constraintEnd_toEndOf="@+id/buttonUpdatingProfile"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/buttonPictureSaved"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUpdatingProfile"
         app:strokeWidth="3dp"
         tools:strokeColor="#61C1CD" />
 
@@ -76,7 +74,7 @@
         android:id="@+id/buttonLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="#5F94D9"
         android:drawableLeft="@android:drawable/btn_star_big_on"
         android:drawableRight="@android:drawable/btn_star_big_on"
@@ -84,17 +82,18 @@
         android:text="Level 4 completed"
         android:textSize="20sp"
         app:cornerRadius="5dp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonUnlocked"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="@+id/buttonUnlocked"
-        app:layout_constraintTop_toBottomOf="@+id/buttonUnlocked" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/buttonPictureSaved"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPictureSaved"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonMusic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="6dp"
         android:backgroundTint="#49A660 "
         android:drawableLeft="@drawable/baseline_pause_circle_24"
         android:padding="15sp"
@@ -102,23 +101,24 @@
         android:textSize="20sp"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonLevel"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toStartOf="@+id/buttonLevel"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLevel"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonUnlocked"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/buttonLevel"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUnlocked"
+        app:layout_constraintVertical_bias="0.076" />
 
     <ImageView
         android:id="@+id/imageAndy"
-        android:layout_width="208dp"
-        android:layout_height="183dp"
+        android:layout_width="197dp"
+        android:layout_height="176dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonPlane"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.53"
+        app:layout_constraintVertical_bias="0.434"
         app:srcCompat="@drawable/andy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
