--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/buttonPlane"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="#7559D9"
         android:drawableLeft="@drawable/baseline_airplanemode_inactive_24"
         android:padding="20sp"
@@ -28,32 +28,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="#D9525E"
         android:drawableLeft="@drawable/baseline_cached_24"
         android:padding="20sp"
         android:text="Updating profile"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toTopOf="@+id/buttonUnlocked"
+        app:layout_constraintEnd_toEndOf="@+id/buttonUnlocked"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/buttonPlane"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/buttonPlane"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/buttonPictureSaved"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:backgroundTint="#C9C9C9"
         android:padding="20sp"
         android:text="Picture saved to gallery"
         android:textColor="#C33434"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageAndy"
+        app:layout_constraintStart_toEndOf="@+id/imageAndy"
         app:layout_constraintTop_toTopOf="@+id/imageAndy"
+        app:layout_constraintVertical_bias="0.524"
         app:strokeColor="#A19F9F"
-        app:strokeWidth="1dp"
-        tools:layout_editor_absoluteX="224dp" />
+        app:strokeWidth="1dp" />
 
     <Button
         android:id="@+id/buttonUnlocked"
@@ -61,24 +63,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#484D50"
         android:padding="20sp"
         android:text="Unlocked level 5"
         android:textColor="#61C1CD"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonUpdatingProfile"
-        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonPictureSaved"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.395"
         app:layout_constraintStart_toEndOf="@+id/buttonPictureSaved"
-        app:layout_constraintTop_toBottomOf="@+id/buttonUpdatingProfile"
-        app:strokeWidth="3dp"
-        tools:strokeColor="#61C1CD" />
+        app:layout_constraintTop_toTopOf="@+id/buttonPictureSaved"
+        app:layout_constraintVertical_bias="0.0"
+        app:strokeColor="#61C1CD"
+        app:strokeWidth="3dp" />
 
     <Button
         android:id="@+id/buttonLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="40dp"
         android:backgroundTint="#5F94D9"
         android:drawableLeft="@android:drawable/btn_star_big_on"
         android:drawableRight="@android:drawable/btn_star_big_on"
@@ -88,41 +93,39 @@
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/buttonPictureSaved"
+        app:layout_constraintHorizontal_bias="0.285"
         app:layout_constraintStart_toStartOf="@+id/buttonPictureSaved"
         app:layout_constraintTop_toBottomOf="@+id/buttonPictureSaved"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.259" />
 
     <Button
         android:id="@+id/buttonMusic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="6dp"
         android:backgroundTint="#49A660 "
         android:drawableLeft="@drawable/baseline_pause_circle_24"
         android:padding="15sp"
         android:text="Music paused"
         android:textSize="20sp"
         app:cornerRadius="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonLevel"
         app:layout_constraintEnd_toEndOf="@+id/buttonUnlocked"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonLevel"
         app:layout_constraintTop_toBottomOf="@+id/buttonUnlocked"
-        app:layout_constraintVertical_bias="0.095" />
+        app:layout_constraintVertical_bias="0.886" />
 
     <ImageView
         android:id="@+id/imageAndy"
         android:layout_width="197dp"
         android:layout_height="176dp"
-        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonPictureSaved"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.468"
+        app:layout_constraintVertical_bias="0.489"
         app:srcCompat="@drawable/andy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
